2003-01-23  Alex Duggan  <aldug@astrolinux.com>

	* Gorilla/icons/scalable/mimetypes/Makefile.am:
	* po/POTFILES.in:
	Make distcheck fixes
	
2003-01-23  Alex Duggan  <aldug@astrolinux.com>

	* Gorilla/icons/scalable/mimetypes/Makefile.am:
	create a gnome-mime-font-ttf.svg symlink to gnome-mime-font.svg
	
2003-01-23  Alex Duggan  <aldug@astrolinux.com>

	* Gorilla/icons/.cvsignore: 
	* Gorilla/.cvsignore:
	Add index.theme

2003-01-23  Alex Duggan  <aldug@astrolinux.com>

	* Gorilla/icons/index.theme: remove from cvs

2003-01-23  Alex Duggan  <aldug@astrolinux.com>

	* po/.cvsignore: initial commit
	
2003-01-24  Jakub Steiner <jimmac * ximian * com>

	* Gorilla/icons/scalable/mimetypes/gnome-mime-application-vnd.sun.xml.writer.svg,
	gnome-mime-application-vnd.sun.xml.impress.svg,
	gnome-mime-application-vnd.sun.xml.calc.svg,
	gnome-mime-application-vnd.sun.xml.draw.svg, 
	Makefile.am: StarOffice icons

	* Gorilla/icons/scalable/filesystems/Makefile.am: add missing
	.icon files

	* Gorilla/icons/scalable/emblems/emblem-seal.svg,
	Makefile.am: the 'seal of approval' emblem

	* ~mimetypes/gnome-mime-application-x-gnome-app-info.svg,
	Makefile.am: .desktop files

2003-01-23  Alex Duggan  <aldug@astrolinux.com>

	* Gorilla/.cvsignore:
	* Gorilla/gtk/.cvsignore:
	* Gorilla/gtk-2.0/.cvsignore:
	* Gorilla/icons/.cvsignore:
	* Gorilla/icons/scalable/.cvsignore:
	* Gorilla/icons/scalable/devices/.cvsignore:
	* Gorilla/icons/scalable/emblems/.cvsignore:
	* Gorilla/icons/scalable/filesystems/.cvsignore:
	* Gorilla/icons/scalable/mimetypes/.cvsignore:
	Initial commit of these

2003-01-23  Alex Duggan  <aldug@astrolinux.com>

	* .cvsignore: Add a .cvsignore

2003-01-23  Jakub Steiner <jimmac * ximian * com>

	* Gorilla/gtk-2.0/Makefile.am: add missing stock_no.svg
	* Gorilla/gtk/gtkrc,
	Gorilla/gtk-2.0/gtkrc: use mist instead (temporarily)

	* configure.in,
	Gorilla/Makefile.am,
	Gorilla/gtk/Makefile.am: add gtk1 theme 

2003-01-23  Alex Duggan  <aldug@astrolinux.com>
	