@@ -14,6 +14,9 @@ config.sub
 ltmain.sh
 stamp-h
 intltool-extract
+intltool-extract.in
 intltool-merge
+intltool-merge.in
 intltool-update
+intltool-update.in
 autom4te.cache
