@@ -1,3 +1,9 @@
+2003-01-24  Jakub Steiner <jimmac@ximian.com>
+
+	* Gorilla/icons/scalable/mimetypes/gnome-mime-font.svg,
+	  gnome-mime-application-x-font.svg,
+	  Makefile.am: rename, add some symlinks, force symlinks
+
 2003-01-23  Alex Duggan  <aldug@astrolinux.com>
 
 	* Gorilla/icons/scalable/mimetypes/Makefile.am:
